@@ -357,29 +357,10 @@ imagetoraster(int inputfd,         /* I - File descriptor input stream */
   doc.Copies = data->copies;
 
  /*
-  * Load PPD file if needed...
-  */
-
-  if (data->ppdfile == NULL && data->ppd == NULL)
-  {
-    char *p = getenv("PPD");
-    if (p)
-      data->ppdfile = strdup(p);
-    else
-      data->ppdfile = NULL;
-  }
-
-  if (data->ppd == NULL && data->ppdfile)
-    data->ppd = ppdOpenFile(data->ppdfile);
-
-  ppd = data->ppd;
-
- /*
   * Process job options...
   */
 
-  ppdMarkDefaults(ppd);
-  ppdMarkOptions(ppd, num_options, options);
+  ppd = data->ppd;
   filterSetCommonOptions(ppd, num_options, options, 0,
 			 &doc.Orientation, &doc.Duplex,
 			 &doc.LanguageLevel, &doc.Color,
