@@ -380,33 +380,11 @@ pdftops(int inputfd,         /* I - File descriptor input stream */
   num_options = data->num_options;
   options = data->options;
 
- /*
-  * Load PPD file if needed...
-  */
-
-  if (data->ppdfile == NULL && data->ppd == NULL)
-  {
-    char *p = getenv("PPD");
-    if (p)
-      data->ppdfile = strdup(p);
-    else
-      data->ppdfile = NULL;
-  }
-
-  if (data->ppd == NULL && data->ppdfile)
-    data->ppd = ppdOpenFile(data->ppdfile);
-
   ppd = data->ppd;
 
  /*
   * Process job options...
   */
-
-  if (ppd)
-  {
-    ppdMarkDefaults(ppd);
-    ppdMarkOptions(ppd, num_options, options);
-  }
 
   if ((val = cupsGetOption("make-and-model", num_options, options)) != NULL)
   {
